# Unity3D_Call_Cpp

./: Assembly-CSharp.csproj  call_Cplusplus.sln  call_Cplusplus.userprefs
Assets/: main.unity  test.cs
Assets/Plugins/: libdlltest.dylib
Assets/_Scripts/: demo.cs
Assets/iiVRToolKit/: ReadMe.txt
Assets/iiVRToolKit/common/imports/: murs_quadrilles.FBX
Assets/iiVRToolKit/common/materials/: M_cadrillage_H__50-3.mat  M_cadrillage_V__50-3.mat  M_cadrillage_V__50-4.mat  M_cadrillage_V__50-4_transparent.mat
Assets/iiVRToolKit/common/prefabs/: murs_quadrilles.prefab
Assets/iiVRToolKit/immersive/materials/: arrete.mat  cubeMat.mat  finger01.mat  finger02.mat  finger03.mat  floorMat.mat  laserMat.mat  leftHand.mat  pad_Left.mat  rightHand.mat
Assets/iiVRToolKit/immersive/scenes/: calibrationBlueLemon.unity  calibrationEliV.unity  exampleBlueLemon1context.unity  exampleSimplyWalls.unity  exempleEliV.unity  exempleMove.unity  exempleNetwork.unity  exempleOculus.unity
Assets/iiVRToolKit/immersive/scripts/: ControleCamManager.cs  cameraManager.cs  caveFieldLimitManager.cs  configScenario.cs  (+18 more)
ProjectSettings/: ProjectSettings.asset
created_dll_cmake/: CMakeLists.txt
created_dll_cmake/include/: SharedAPI.h
created_dll_cmake/src/: SharedAPI.cpp
dll_cmake_ex1/: CMakeLists.txt
dll_cmake_ex1/include/: SharedAPI.h
dll_cmake_ex2_passList/: CMakeLists.txt
dll_cmake_ex2_passList/include/: SharedAPI.h
dll_cmake_ex2_passList/src/: SharedAPI.cpp
speedOptimizerDLL/: CMakeLists.txt
speedOptimizerDLL/include/: SharedAPI.hpp
speedOptimizerDLL/src/: SharedAPI.cpp
(+31 files in other folders)
